isitio-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kapuut-routes  
spec:
  hosts:
    - "*"  
  gateways:
    - microservice-gateway  
  http:
    - match:
        - uri:
            prefix: /api/quiz/
      rewrite:
        uri: /quiz/  
      route:
        - destination:
            port:
              number: 80
            host: quiz-creator.default.svc.cluster.local  

  # hosts:
  #   - "*"  
  # gateways:
  #   - microservice-gateway  
  # http:
  #   - match:
  #       - uri:
  #           prefix: /api/quiz/
  #     rewrite:
  #       uri: /  
  #     route:
  #       - destination:
  #           port:
  #             number: 80
  #           host: quiz-creator.default.svc.cluster.local
